--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
         <li>Kubernetes</li>
         <li>Ansible</li>
         <li>Terraform</li>
-        <li>GitLab CI/CD</li>
+        <li>GitHub Actions</li>
     </ul>
     <p>Спасибо за внимание!</p>
 </body>
